--- a/styles.css
+++ b/styles.css
@@ -32,9 +32,9 @@ nav ul li{
 nav ul li a{
   color: #f2f2f2;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 15px;
   font-weight: 500;
-  padding: 8px 15px;
+  padding: 8px 6px;
   border-radius: 5px;
   letter-spacing: 1px;
   transition: all 0.3s ease;
@@ -121,4 +121,35 @@ nav .menu-btn i{
     color: #fff;
     text-align: center;
   }
+  .content .scrolling {
+    position: relative;
+    width: 100%;
+    height: 50px;
+    overflow: hidden;
+    margin-top: 50px;
+  }
+  .content .scrolling P {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-size: 2em;
+    text-align: center;
+    line-height: 50px;
+    color: rgb(26, 25, 25);
+    transform: translateX(100%);
+    animation: scrolling 14s linear infinite;
+    background-color:rgba(218, 216, 216, 0.301); font-size: 28px; font-weight: bold; 
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  }
+  @keyframes scrolling {
+    0% {
+      transform: translateX(100%);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
+  }
+  
  
